- Fixed scaling issues wrt the heading and subheading texts,  padding, and overflow. - Sidebar is completed - Top-navbar is all that's left for the index page - Gallery page just needs its JQuery touch.

--- a/mainPage.css
+++ b/mainPage.css
@@ -30,6 +30,10 @@ body
 .col-12{width: 100%;}
 /* End of Gridview */
 
+.test
+{
+    width: 80px;
+}
 
 /* Sidebar stylings here. Content area stylings further below.*/
 .sidebar
@@ -39,16 +43,19 @@ body
 
     float:left;
     background-color: #000000;
-    width: calc(40px + 20 * ((100vw - 440px) / 1000));
-    height:100%;
-
+    
     position:fixed;
     top:0px;
+    bottom:0px;
     left:0px;
     z-index:10;
 
     transition: width 0.5s;
     -webkit-transition: width 0.5s;
+}
+.sidebarWidth
+{
+    width: calc(40px + 20 * ((100vw - 440px) / 1000));
 }
 #navBtn
 {
@@ -99,24 +106,24 @@ body
 .content
 {
     margin:0;
-    padding:0 75px;
+    padding:0 2.5vw;
     width:calc(100vw - (40px + 20 * ((100vw - 440px) / 1000)));
     float:right;
 
     background-color: rgba(153, 196, 210, 0.4);
 }
-.centerText-heading, #subHeading
+#centerHeading, #subHeading
 {
-    font-size:100px;
     color:white;
     text-align:center;
     -webkit-text-fill-color:white;
 }
-.centerText-heading
+#centerHeading
 {
     padding:100px;
     padding-bottom: 200px;
 
+    font-size:100px;
     padding-left:0;
     padding-right:0;
 }
@@ -233,12 +240,22 @@ img.sectionImg-right
     }
     #navBtn
     {
+        display:block;
+    }
+    #sidebar-items
+    {
+        background-color:grey;
+    }
+    #navBtn
+    {
         position:static;
     }
     
     .content
     {
         width: 100%;
+        height:100%;
+        padding-top:40px;
     }
     [class*="sectionImg"]
     {
@@ -264,13 +281,22 @@ img.sectionImg-right
         font-size:3vw;
     }
 
-    .centerText-heading
+    #centerHeading
     {
         padding-top:0px;
+        /* font-size: calc(100px - (100px / 100vw)); */
     }
-}
-/* Change the background image, looks strange under 615px of width. */
-@media only screen and (max-width:615px)
-{
 
+    /* Change the background image, looks strange under 615px of width. */
+    @media only screen and (max-width:615px)
+    {
+        #centerHeading
+        {
+            font-size: 17vw;
+        }
+        #subHeading
+        {
+            font-size: 10vw;
+        }
+    }
 }
